улучшение работы апи
